--- a/todo.adoc
+++ b/todo.adoc
@@ -20,6 +20,7 @@
   * start
   * stop
 * config includes or conf.d style include
+* confirmation before deleting all jails (and -f to force)
 
 == missing tests:
   * cmd function
