Settings now takes a string as input rather than file.
Makes testing easier

--- a/todo.adoc
+++ b/todo.adoc
@@ -11,6 +11,7 @@
  * settings: deny unknown fields everywhere
  * settings: validate source name
  * settings: validate provisioner names
+ * settings: tidy up example/test config files
 
 == backlog
 
