Added wrapper for streaming command output to log

--- a/todo.adoc
+++ b/todo.adoc
@@ -12,6 +12,7 @@
  * settings: validate source name
  * settings: validate provisioner names
  * settings: tidy up example/test config files
+ * setup resolv.conf in test basejail
 
 == backlog
 
