--- a/todo.adoc
+++ b/todo.adoc
@@ -13,11 +13,15 @@
 
 == next up
 
+ * add provision sub-command
+ * add 'is_ready' Jail method
+ * test in Jail that snapshots are created
  * settings: deny unknown fields everywhere
  * settings: validate source name
  * settings: validate provisioner names
  * settings: tidy up example/test config files
  * setup resolv.conf in test basejail
+ * refactor source.rs to work like provisioners
 
 == backlog
 
