--- a/todo.adoc
+++ b/todo.adoc
@@ -2,7 +2,7 @@
 
 == doing
 
-* test that Jail snapshots are created
+* tests for Jail snapshots
 * add provision sub-command
 * file provisioner
 * puppet provisioner
@@ -16,12 +16,16 @@
  * settings: validate provisioner names
  * settings: tidy up example/test config files
  * setup resolv.conf in test basejail (needs file provisioner)
- * refactor source.rs to work like provisioners
 
 === First release
 
 * confirmation before deleting all jails (and -f to force)
 * tidy up and tests for main
+
+=== Refactoring
+
+* refactor source.rs to work like provisioners
+* breakout a zfs snapshot into a separate struct
 
 === Later
 
