Puppet provisioner test data

--- a/todo.adoc
+++ b/todo.adoc
@@ -58,3 +58,12 @@
   * zfs snapshot method
   * zfs clone method
 * try testing commands with mockall
+
+
+== Puppet notes
+
+pkg install puppet6
+pkg install rubygem-r10k-3.3.3
+
+r10k puppetfile install
+puppet apply --hiera_config hiera.yaml --environmentpath /vagrant/testdata/provisioners --environment puppet manifests/site.pp
