More work on puppet provisioner

--- a/todo.adoc
+++ b/todo.adoc
@@ -27,6 +27,7 @@
 * refactor source.rs to work like provisioners
 * breakout a zfs snapshot into a separate struct
 * factor out test jail set up (for serial tests)
+* remove dependency on rsync
 
 === Later
 
