--- a/todo.adoc
+++ b/todo.adoc
@@ -6,10 +6,17 @@
 
 * freebsd-update jails
 * ability to split configuration into 'include' snippets
-* jail resource limits
 * mount additional data sets in jails
 * detect if provisioner has made changes
 * settings: validate jail conf sections (known fileds, types)
+* rsync provisioner
+* jail resource limits
+* progress bar when extracting freebsd dists
+* pkg upgrade jails
+* jexec and chroot provisioning (for running jail and stopped)?
+
+=== Bugs
+* provisioner didn't run on base
 
 === Refactor
 
