Rejiggled where fstab template lives

--- a/todo.adoc
+++ b/todo.adoc
@@ -14,6 +14,7 @@
 * pkg upgrade jails
 * puppet: remove manifest after provision
 * rsync provisioner
+* change paths represented as strings to Path
 
 === Bugs
 
