Write fstab during apply if volumes configured

--- a/todo.adoc
+++ b/todo.adoc
@@ -15,6 +15,7 @@
 * puppet: remove manifest after provision
 * rsync provisioner
 * change paths represented as strings to Path
+* refactor 'update_with_diff'
 
 === Bugs
 
