Test that volumes are actually mounted

--- a/todo.adoc
+++ b/todo.adoc
@@ -16,6 +16,7 @@
 * rsync provisioner
 * change paths represented as strings to Path
 * refactor 'update_with_diff'
+* move jail conf template to template module
 
 === Bugs
 
