--- a/todo.adoc
+++ b/todo.adoc
@@ -18,6 +18,7 @@
 
 === Refactor
 
+* Dry up provisioner/source enums using traits
 * create a struct for zfs snapshots
 * remove dependency on rsync for copying files recursively
 * tests and validation for FreeBSD source
@@ -32,3 +33,5 @@
 * ability to split configuration file into 'include' snippets
 * detect if provisioner has made changes
 * jail resource limits
+* make config more portable between machines
+  * handle networking (jail IP changes)
