--- a/todo.adoc
+++ b/todo.adoc
@@ -2,13 +2,14 @@
 
 == Doing
 
-=== Tasks 
+=== Tasks
 
 * check that we're running as root
 * puppet: remove manifest after provision
 * settings: validate jail conf sections (known fileds, types)
 * start jail using the jail command rather than service
   * so a boot disabled jail can still be started as a one off
+* restart jail when jail.conf changes
 
 === Bugs
 
