--- a/todo.adoc
+++ b/todo.adoc
@@ -10,6 +10,7 @@
 * start jail using the jail command rather than service
   * so a boot disabled jail can still be started as a one off
 * restart jail when jail.conf changes
+* error when rsync isn't present and things depend on it (like puppet prov)
 
 === Bugs
 
